--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Prodüktör: Lorem Ipsum"></textarea><br><hr>
 
         <!-- Butonları ve mesajı merkeze alıyoruz -->
         <div class="button-container">
-            <button id="generate">netd metadata!</button>
+            <button id="generate">Metadata Oluştur!</button>
         </div>
 
         <!-- Hata Mesajı Alanı -->
