--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ul>
                 <li>Uygulamanın panonuza (kopyaladığınız metne) erişebilmesi için tarayıcınızdan <em>izin vermeniz gerekmektedir</em>. Bu site hiçbir veriyi depolamaz veya işlemez.</li>
                 <li>Eğer <strong>ISRC</strong> veya <strong>UPC</strong> bilgileri eksikse uygulama çalışmayabilir. Metadata oluşturmak için içeriğinizin <strong>onaylanmış</strong> olmasına dikkat edin.</li>
-                <li>Oluşturulan metadata dosyası temel özellikleri içerir. Eklemek istediğiniz ek bilgileri ekranın sağında bulunan "+" ikonuna basarak açılacak form alanlarına ekleyebilirsiniz ya da oluşturduğunuz dosyayı elle güncelleyerek ekleyebilirsiniz.</li>
-                <li>Görüş ve önerileriniz için e-posta</a> ile iletişime geçebilirsiniz.</li>
+                <li>Oluşturulan metadata dosyası temel özellikleri içerir. Eklemek istediğiniz ek bilgileri ekranın sağında bulunan "+" ikonuna basarak açılacak form alanlarına ekleyebilirsiniz ya da oluşturduğunuz dosyayı elle güncelleyerek ekleyebilirsiniz. <strong>Butona tıklamadan önce</strong> form alanını <i>doldurmuş</i> olmanız gerekmektedir.</li>
+                <i>Görüş ve önerileriniz için e-posta</a> ile iletişime geçebilirsiniz.</i>
             </ul>
         </div>
     </div>
